Scrollbar fixes

--- a/app/assets/stylesheets/base.sass
+++ b/app/assets/stylesheets/base.sass
@@ -2,6 +2,7 @@
 
 html 
   box-sizing: border-box
+  overflow-y: scroll
 
 *, *:before, *:after 
   box-sizing: inherit
@@ -10,6 +11,7 @@ body
   font-family: vars.$main-font
   background: #1f1f1f
   color: #fafafa
+  overflow-y: scroll
   -webkit-font-smoothing: antialiased
 
   * // disables font boosting on android chrome
