--- a/app/javascript/game_modes/base.sass
+++ b/app/javascript/game_modes/base.sass
@@ -9,7 +9,7 @@
     display: flex
     flex-direction: column
     align-items: center
-    min-height: 100vh
+    // min-height: 100vh
     // padding: 20px 0
     // padding-top: 30px
 
